[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ckg-nvidia-nemoclaw"
version = "0.4.0"
description = "NVIDIA NemoClaw as a traversable knowledge graph — sandboxed AI agent infrastructure, OpenShell runtime, inference routing, and network policy — MCP-native"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Daniel Yarmoluk", email = "daniel.yarmoluk@gmail.com" }]
keywords = [
    "nvidia", "nemoclaw", "openclaw", "hermes", "openshell",
    "knowledge-graph", "mcp", "ai-agents", "sandbox", "inference-routing",
    "network-policy", "ckg",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
requires-python = ">=3.11"
dependencies = ["mcp[cli]>=1.0.0"]

[project.optional-dependencies]
serve = ["starlette>=0.41.0", "uvicorn>=0.30.0", "fastmcp>=0.4.0"]

[project.scripts]
ckg-nvidia-nemoclaw = "ckg_nvidia_nemoclaw.server:main"
ckg-nvidia-nemoclaw-serve = "ckg_nvidia_nemoclaw.serve:main"

[project.urls]
Homepage = "https://graphifymd.com"
Repository = "https://github.com/Yarmoluk/ckg-nvidia-nemoclaw"
"Bug Tracker" = "https://github.com/Yarmoluk/ckg-nvidia-nemoclaw/issues"
Benchmark = "https://github.com/Yarmoluk/ckg-benchmark/blob/main/paper/main.pdf"

[tool.hatch.build.targets.wheel]
packages = ["src/ckg_nvidia_nemoclaw"]
